Added jQuery Animations + Polish

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>Madeline M18 Challenge</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -11,10 +17,10 @@
         </div>
         <nav class="inline-block">
             <ul class="topmenu">
-                <li class="inline-block">ABOUT</li>
-                <li class="inline-block">SKILLS</li>
-                <li class="inline-block">WORK</li>
-                <li class="inline-block">CONTACT</li>
+                <li class="inline-block"><a href="#">ABOUT</a></li>
+                <li class="inline-block"><a href="#mySkills">SKILLS</a></li>
+                <li class="inline-block"><a href="#myWork-Grid">WORK</a></li>
+                <li class="inline-block"><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -23,6 +29,7 @@
     <div class="content card">
         <img src="images\Photo.png" width="313" height="342">
         <div class="container"
+        <p>Hi! I'm Madeline Zdunkewicz</p>
         <p>I’m a former educator who loves connecting with other humans and creating delightful experiences for them.</p>
         <button>Download Resume</button>
     </div>
@@ -85,6 +92,9 @@
     </ul>
   </footer>
 
+  <button onclick="topFunction()" id="myBtn" title="Go to top"> Back to Top</button>
 
 </body>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="/js/script.js"></script>
 </html>
